@@ -1,3 +1,7 @@
+= master
+
+* Improve render/view performance up to 2x in development mode in the default case by calling compiled template methods directly (jeremyevans)
+
 = 3.22.0 (2019-07-12)
 
 * Improve render performance up to 4x in the default case by calling compiled template methods directly (jeremyevans)
